--- a/portfolio.html
+++ b/portfolio.html
@@ -117,7 +117,7 @@
                 <ul class="portfolio-list list">
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <img srcset="
+                            <picture srcset="
                     ./images/our-people.jpg 1x,                   
                     ./images/our-people-2x.jpg 2x
                   " src="./images/our-people.jpg" alt="фото сотрудников" width="450" />
@@ -134,7 +134,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <img srcset="
+                            <picture srcset="
                     ./images/ball.jpg 1x,                   
                     ./images/ball-2x.jpg 2x
                   " src="./images/ball.jpg" alt="парни играют в баскетбол" width="450" />
@@ -154,7 +154,7 @@
 
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <img srcset="
+                            <picture srcset="
                     ./images/seafood.jpg 1x,                   
                     ./images/seafood-2x.jpg 2x
                   " src="./images/seafood.jpg" alt="ресторан морепродуктов" width="450" />
@@ -173,7 +173,7 @@
 
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <img srcset="
+                            <picture srcset="
                     ./images/headphone.jpg 1x,                   
                     ./images/headphone-2x.jpg 2x
                   " src="./images/headphone.jpg" alt="наушники" width="450" />
@@ -191,7 +191,7 @@
 
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <img srcset="
+                            <picture srcset="
                     ./images/2-box.jpg 1x,                   
                     ./images/2-box-2x.jpg 2x
                   " src="./images/2-box.jpg" alt="две коробки" width="450" />
@@ -209,7 +209,7 @@
 
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <img srcset="
+                            <picture srcset="
                     ./images/screen.jpg 1x,                   
                     ./images/screen-2x.jpg 2x
                   " src="./images/screen.jpg" alt="экран" width="450" />
@@ -220,14 +220,14 @@
                             </div>
                         </div>
                         <div class="portfolio-border">
-                            <h2 class="portfolio-list-title"><span lang="en">Inspiration has no Borders</span< /h2>
+                            <h2 class="portfolio-list-title"><span lang="en">Inspiration has no Borders</span></h2>
                                     <p class="portfolio-list-text">Веб-сайт</p>
                         </div>
                     </li>
 
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <img srcset="
+                            <picture srcset="
                     ./images/book.jpg 1x,                   
                     ./images/book-2x.jpg 2x
                   " src="./images/book.jpg" alt="книга" width="450" />
@@ -245,7 +245,7 @@
 
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <img srcset="
+                            <picture srcset="
                     ./images/label.jpg 1x,                   
                     ./images/label-2x.jpg 2x
                   " src="./images/label.jpg" alt="бирка для чемодана" width="450" />
@@ -263,7 +263,7 @@
 
                     <li class="portfolio-item border">
                         <div class="portfolio-description">
-                            <img srcset="
+                            <picture srcset="
                     ./images/leptop.jpg 1x,                   
                     ./images/leptop-2x.jpg 2x
                   " src="./images/leptop.jpg" alt="ноутбук" width="450" />
