--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <h2 class="team__title section-title">Наша команда</h2>
                 <ul class="team-list list">
                     <li class="team-list__item">
-                        <img class="photo thumb-team" srcset="
+                        <picture class="photo thumb-team" srcset="
                     ./images/mobile-product-designer.jpg 1x,                   
                     ./images/mobile-product-designer-2x.jpg 2x
                   " src="./images/mobile-product-designer.jpg" alt="фото Игоря Демьяненко" width="450" />
@@ -230,7 +230,7 @@
                     </li>
 
                     <li class="team-list__item">
-                        <img class="photo thumb-team" srcset="
+                        <picture class="photo thumb-team" srcset="
                     ./images/mobile-frontend-developer.jpg 1x,                   
                     ./images/mobile-frontend-developer-2x.jpg 2x
                   " src="./images/mobile-frontend-developer.jpg" alt="фото Ольга Репина" width="450" />
@@ -273,7 +273,7 @@
                         </div>
                     </li>
                     <li class="team-list__item">
-                        <img class="photo thumb-team" srcset="
+                        <picture class="photo thumb-team" srcset="
                     ./images/mobile-marketing.jpg 1x,                   
                     ./images/mobile-marketing-2x.jpg 2x
                   " src="./images/mobile-marketing.jpg" alt="фото Николай Тарасов" width="450" />
@@ -316,7 +316,7 @@
                         </div>
                     </li>
                     <li class="team-list__item">
-                        <img class="photo thumb-team" srcset="
+                        <picture class="photo thumb-team" srcset="
                     ./images/mobile-ui-designer.jpg 1x,                   
                     ./images/mobile-ui-designer-2x.jpg 2x
                   " src="./images/mobile-ui-designer.jpg" alt="фото Михаил Ермаков" width="450" />
@@ -529,7 +529,7 @@
                 </div>
                 <div class="form-field-chek">
 
-                    <label class="policy-label" for="policy"></a>
+                    <label class="policy-label" for="policy">
                         <input class="form-checkbox" type="checkbox" name="policy" id="policy">
                         <span class="icon-chek"></span>
                         Соглашаюсь с рассылкой и принимаю <a class="policy-link" href="">Условия договора</a>
