--- a/portfolio.html
+++ b/portfolio.html
@@ -117,10 +117,12 @@
                 <ul class="portfolio-list list">
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <picture srcset="
+                            <picture>
+                            <img srcset="
                     ./images/our-people.jpg 1x,                   
                     ./images/our-people-2x.jpg 2x
                   " src="./images/our-people.jpg" alt="фото сотрудников" width="450" />
+                </picture>
                             <div class="portfolio-overlay">
                                 <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
                                 функционала и сервисов. Все это позволит посетителю получить
@@ -134,10 +136,12 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <picture srcset="
+                            <picture>
+                            <img srcset="
                     ./images/ball.jpg 1x,                   
                     ./images/ball-2x.jpg 2x
                   " src="./images/ball.jpg" alt="парни играют в баскетбол" width="450" />
+                </picture>
                             <div class="portfolio-overlay">
                                 <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
                                 функционала и сервисов. Все это позволит посетителю получить
@@ -154,10 +158,12 @@
 
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <picture srcset="
+                            <picture>
+                                <img srcset="
                     ./images/seafood.jpg 1x,                   
                     ./images/seafood-2x.jpg 2x
                   " src="./images/seafood.jpg" alt="ресторан морепродуктов" width="450" />
+                </picture>
                             <div class="portfolio-overlay">
 
                                 <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
@@ -173,10 +179,12 @@
 
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <picture srcset="
+                            <picture>
+                                <img srcset="
                     ./images/headphone.jpg 1x,                   
                     ./images/headphone-2x.jpg 2x
                   " src="./images/headphone.jpg" alt="наушники" width="450" />
+                </picture>
                             <div class="portfolio-overlay">
                                 <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
                                 функционала и сервисов. Все это позволит посетителю получить
@@ -191,10 +199,12 @@
 
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <picture srcset="
+                            <picture>
+                                <img srcset="
                     ./images/2-box.jpg 1x,                   
                     ./images/2-box-2x.jpg 2x
                   " src="./images/2-box.jpg" alt="две коробки" width="450" />
+                </picture>
                             <div class="portfolio-overlay">
                                 <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
                                 функционала и сервисов. Все это позволит посетителю получить
@@ -209,10 +219,12 @@
 
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <picture srcset="
+                            <picture>
+                                <img srcset="
                     ./images/screen.jpg 1x,                   
                     ./images/screen-2x.jpg 2x
                   " src="./images/screen.jpg" alt="экран" width="450" />
+                </picture>
                             <div class="portfolio-overlay">
                                 <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
                                 функционала и сервисов. Все это позволит посетителю получить
@@ -227,10 +239,12 @@
 
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <picture srcset="
+                            <picture>
+                                <img srcset="
                     ./images/book.jpg 1x,                   
                     ./images/book-2x.jpg 2x
                   " src="./images/book.jpg" alt="книга" width="450" />
+                </picture>
                             <div class="portfolio-overlay">
                                 <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
                                 функционала и сервисов. Все это позволит посетителю получить
@@ -245,10 +259,12 @@
 
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <picture srcset="
+                            <picture>
+                                <img srcset="
                     ./images/label.jpg 1x,                   
                     ./images/label-2x.jpg 2x
                   " src="./images/label.jpg" alt="бирка для чемодана" width="450" />
+                </picture>
                             <div class="portfolio-overlay">
                                 <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
                                 функционала и сервисов. Все это позволит посетителю получить
@@ -263,10 +279,12 @@
 
                     <li class="portfolio-item border">
                         <div class="portfolio-description">
-                            <picture srcset="
+                            <picture>
+                                <img srcset="
                     ./images/leptop.jpg 1x,                   
                     ./images/leptop-2x.jpg 2x
                   " src="./images/leptop.jpg" alt="ноутбук" width="450" />
+                <picture>
                             <div class="portfolio-overlay">
                                 <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
                                 функционала и сервисов. Все это позволит посетителю получить
