--- a/index.html
+++ b/index.html
@@ -186,10 +186,12 @@
                 <h2 class="team__title section-title">Наша команда</h2>
                 <ul class="team-list list">
                     <li class="team-list__item">
-                        <picture class="photo thumb-team" srcset="
+                        <picture>
+                        <img class="photo thumb-team" srcset="
                     ./images/mobile-product-designer.jpg 1x,                   
                     ./images/mobile-product-designer-2x.jpg 2x
                   " src="./images/mobile-product-designer.jpg" alt="фото Игоря Демьяненко" width="450" />
+                </picture>
                         <div class="team-list__workers">
                             <h3 class="team-list__worker">Игорь Демьяненко</h3>
                             <p class="team-list__profession" lang="en">Product Designer</p>
@@ -230,10 +232,12 @@
                     </li>
 
                     <li class="team-list__item">
-                        <picture class="photo thumb-team" srcset="
+                        <picture>
+                        <img class="photo thumb-team" srcset="
                     ./images/mobile-frontend-developer.jpg 1x,                   
                     ./images/mobile-frontend-developer-2x.jpg 2x
                   " src="./images/mobile-frontend-developer.jpg" alt="фото Ольга Репина" width="450" />
+                </picture>
                         <div class="team-list__workers">
                             <h3 class="team-list__worker">Ольга Репина</h3>
                             <p class="team-list__profession" lang="en">Frontend Developer</p>
@@ -273,10 +277,12 @@
                         </div>
                     </li>
                     <li class="team-list__item">
-                        <picture class="photo thumb-team" srcset="
+                        <picture>
+                        <img class="photo thumb-team" srcset="
                     ./images/mobile-marketing.jpg 1x,                   
                     ./images/mobile-marketing-2x.jpg 2x
                   " src="./images/mobile-marketing.jpg" alt="фото Николай Тарасов" width="450" />
+                </picture>
                         <div class="team-list__workers">
                             <h3 class="team-list__worker">Николай Тарасов</h3>
                             <p class="team-list__profession" lang="en">Marketing</p>
@@ -316,10 +322,12 @@
                         </div>
                     </li>
                     <li class="team-list__item">
-                        <picture class="photo thumb-team" srcset="
+                        <picture>
+                        <img class="photo thumb-team" srcset="
                     ./images/mobile-ui-designer.jpg 1x,                   
                     ./images/mobile-ui-designer-2x.jpg 2x
                   " src="./images/mobile-ui-designer.jpg" alt="фото Михаил Ермаков" width="450" />
+                </picture>
                         <div class="team-list__workers">
                             <h3 class="team-list__worker">Михаил Ермаков</h3>
                             <p class="team-list__profession" lang="en">UI Designer</p>
